[package]
name = "brawl_hub_migration_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.188", features = ["derive"]}
# postgres = "0.19.7"
sqlx = { version = "0.7", features = [ "runtime-tokio", "uuid", "postgres", "macros" ] }
uuid = {version = "1.5.0", features = ["v4"]}
futures = "0.3.28"
slug = "0.1.4"