[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "uuid", "postgres", "macros", "tls-native-tls", "bigdecimal" ] }
tower-http = { version = "0.4.4", features = ["full"] }
uuid = {version = "1.7.0", features = ["serde"]}
